--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="main_screen_title">Поиск дешевых\nавиабилетов</string>
+    <string name="main_screen_title">Поиск дешевых</string>
+    <string name="main_screen_title_tickets">авиабилетов</string>
     <string name="main_hint_dparture">Откуда - Москва</string>
     <string name="main_hint_arrival">Куда - Турция</string>
     <string name="main_price_from">от %1$s ₽</string>
