--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="nav_geo">Короче</string>
     <string name="nav_subscriptions">Подписки</string>
     <string name="nav_profile">Профиль</string>
+
+    <string name="search_dialog_complicated_route">Сложный маршрут</string>
+    <string name="search_dialog_anywhere">Куда угодно</string>
+    <string name="search_dialog_weekends">Выходные</string>
+    <string name="search_dialog_hot_flights">Горящие билеты</string>
 </resources>
