build domain layer provide di whole layers import resources add adapters provide diffutil to adapters provide shared vm for managing bottom sheet state

--- a/uikit/src/main/res/values/strings.xml
+++ b/uikit/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="ticket_list_filter">Фильтр</string>
     <string name="ticket_list_price_chart">График цен</string>
 
+    <string name="favorite_route">Популярное направление</string>
+
 </resources>
